--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "bootstrap": "^5.1.3",
+    "leaflet": "^1.8.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
