--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.8.0",
     "next": "latest",
     "react": "17.0.2",
+    "react-calendly": "^4.0.0",
     "react-dom": "17.0.2"
   }
 }
