--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-calendly": "^4.0.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-reveal": "^1.2.2"
   }
 }
